# scratchpad

./: .gitignore  README.md  SIMDPrototyping.sln
.github/workflows/: dotnet-core.yml
Abomination/AbominationInterop/: AbominationInterop.sln  buildandcopytopeel.cmd  copytopeel.cmd  nuget.config
Abomination/AbominationInterop/Native/NativeCMake/: CMakeLists.txt  NativeCMake.cpp  NativeCMake.h
AutomagicWorkflows/: SomeLibrary.sln
AutomagicWorkflows/SomeLibrary/: SomeLibrary.csproj  Tarben.cs
AutomagicWorkflows/SomeTests/: SomeTests.csproj  UnitTest1.cs
BEPUutilities v2/: BEPUutilities.sln
BEPUutilities v2/BEPUutilities/: AffineTransform.cs  AffineTransformSIMD.cs  BEPUutilities.csproj  BEPUutilities2.csproj  BoundingBox.cs  BoundingSphere.cs  ContainmentType.cs  ConvexHullHelper.Pruning.cs  ConvexHullHelper.cs  (+24 more)
Benchmarks/: Benchmarks.sln  runBenches.cmd
BlogStuff/: BlogStuff.sln
Dependencies/: BEPUphysics.XML
HeadlessTests24/: HeadlessTests24.sln
IntrinsicsTesting/: IntrinsicsTesting.sln
Repro/: Repro.sln
SIMDPrototyping/: Helpers.cs  HybridConstraintTest.cs  Matrix3x3.cs  Matrix3x3Width4.cs  MicroFiddling.cs  NewScalarConstraintTEst.cs  OldScalarConstraintTest.cs  PenetrationConstraint.cs  Program.cs  RigidBody.cs  SIMDPrototyping.csproj  SingleVectorizedConstraintTEst.cs  Solver.cs  TestCollidable.cs  Vector3Ex.cs  Vector3Wide.cs  Vector3Width4.cs  VectorizedConstraintTEst.cs  VectorizedManifoldTest.cs  VectorizedPenetrationConstraint.cs
SIMDWidthChecker/: SIMDWidthChecker.sln
SolverPrototype/: SolverPrototype.sln
x86Repro/: x86Repro.sln
(+811 files in other folders)
